feat: port to Java 8 / Spigot 1.8 for universal compatibility (1.8-1.21+)